--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera pagina Express</title>
+    <title>Contact</title>
 </head>
 <body>
-    <h1>Indexxxxxx 2</h1>
+    <h1>Este es el contact</h1>
 </body>
 </html>
