--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title><%= title %></title>
 </head>
 <body>
+    <%- include('partials/navigation') %>
+    
     <h1>Este es el about</h1>
 </body>
 </html>
