--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera pagina Express</title>
+    <title><%= title %></title>
 </head>
 <body>
-    <h1>Indexxxxxx 2</h1>
+    <%- include('partials/navigation') %>
+
+    <h1>Acgoooo indexxxx</h1>
+
+    <%- include('partials/footer') %>
+
 </body>
 </html>
