--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -7,7 +7,9 @@
 </head>
 <body>
     <%- include('partials/navigation') %>
-    
+
     <h1>Este es el contact</h1>
+
+    <%- include('partials/footer') %>
 </body>
 </html>
