que he cambiado

--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titulo</title>
-    <%- include('partials/head') %>
+    <!-- <%- include('partials/head') %> -->
 </head>
 <body>
-    <%- include('partials/navigation') %>
+    <!--<%- include('partials/navigation') %> -->
 
     <h1>Este es el contact</h1>
 
-    <%- include('partials/footer') %>
+    <!--<%- include('partials/footer') %> -->
 </body>
 </html>
